tests/regression/errors/shadow_type.eff
type cow = Horn of int
type bull = Tail of string
type cow = Hoof of bool
